Code and Tests refactored